<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/subject_background"
    android:padding="2.5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/foto1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/subject_background"
                android:backgroundTint="@color/tipografia"
                android:text="@string/DG1_FMA_s1_s"
                android:gravity="center"
                android:textSize="@dimen/asignaturasWidget"/>
            <TextView
                android:id="@+id/DTG1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/subject_background"
                android:backgroundTint="@color/DGT"
                android:text="@string/DG1_DTG_s2_s"
                android:gravity="center"
                android:textSize="@dimen/asignaturasWidget"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/FHD1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/subject_background"
                android:backgroundTint="@color/FHD"
                android:text="@string/DG1_FHD_s2_s"
                android:gravity="center"
                android:textSize="@dimen/asignaturasWidget"/>
            <TextView
                android:id="@+id/PB1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/subject_background"
                android:backgroundTint="@color/PB"
                android:text="@string/DG1_PB_s2_s"
                android:gravity="center"
                android:textSize="@dimen/asignaturasWidget"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"/>
            <TextView
                android:id="@+id/foto2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/subject_background"
                android:backgroundTint="@color/tipografia"
                android:text="@string/DG1_FMA_s1_s"
                android:gravity="center"
                android:textSize="@dimen/asignaturasWidget"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/FHD2"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/subject_background"
                android:backgroundTint="@color/FHD"
                android:text="@string/DG1_FHD_s2_s"
                android:gravity="center"
                android:textSize="@dimen/asignaturasWidget"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
            <TextView
                android:id="@+id/PB3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/subject_background"
                android:backgroundTint="@color/PB"
                android:text="@string/DG1_PB_s2_s"
                android:gravity="center"
                android:textSize="@dimen/asignaturasWidget"/>
        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/recreo_s2"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:text="@string/breakTime"
        android:background="@drawable/subject_background"
        android:backgroundTint="@color/colorAccent"
        android:gravity="center"
        android:textSize="15sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/DTG2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/subject_background"
                android:backgroundTint="@color/DGT"
                android:text="@string/DG1_DTG_s2_s"
                android:gravity="center"
                android:textSize="@dimen/asignaturasWidget"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/PB2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/subject_background"
                android:backgroundTint="@color/PB"
                android:text="@string/DG1_PB_s2_s"
                android:gravity="center"
                android:textSize="@dimen/asignaturasWidget"/>

            <TextView
                android:id="@+id/ilu1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/subject_background"
                android:backgroundTint="@color/cientifico"
                android:gravity="center"
                android:text="@string/ilu"
                android:textSize="@dimen/asignaturasWidget" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/foto3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/subject_background"
                android:backgroundTint="@color/tipografia"
                android:text="@string/DG1_FMA_s1_s"
                android:gravity="center"
                android:textSize="@dimen/asignaturasWidget"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/DTG3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/subject_background"
                android:backgroundTint="@color/DGT"
                android:text="@string/DG1_DTG_s2_s"
                android:gravity="center"
                android:textSize="@dimen/asignaturasWidget"/>
            <TextView
                android:id="@+id/ilu2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/subject_background"
                android:backgroundTint="@color/cientifico"
                android:text="@string/ilu"
                android:gravity="center"
                android:textSize="@dimen/asignaturasWidget"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>

</LinearLayout>